fix some rendering issues on mobile devices using webkit (Nokia, iPhone, iPod Touch)
git-svn-id: http://abadthing.com/tmbo/trunk@416 7ced0b6d-2a13-0410-a4a2-c2825b4e6d43

--- a/web/styles/oldskool.css
+++ b/web/styles/oldskool.css
@@ -246,3 +246,7 @@ table.thumbnails td a {
 a .tags {
 
 }
+
+@media only screen and (max-device-width: 480px) {
+	body { -webkit-text-size-adjust: none; }
+}
